# compiler

./: .travis.yml  CLASSES.bobcat  CMakeLists.txt  README.md  install-bison-flex-c++.sh
install/: .gitignore  CLASSES.bobcat  install-bison-flex-c++.sh  install-clang.sh  install-gcc.sh
install/patches/: bisonc++polymorphic.inline  bisoncpp.patch  bobcat.patch  flexcpp.patch  fswap  scanner.h  startconditions.h
parse/: grammar  lexer  main.cpp
src/: main.cpp
src/ast/: ast.cpp  ast.hpp  decoration.cpp  decoration.hpp  expression.cpp  expression.hpp  printcode.cpp  printcode.hpp  printvisitor.cpp  printvisitor.hpp  recursivevisitor.cpp  recursivevisitor.hpp  scope.cpp  scope.hpp  scopevisitor.cpp  scopevisitor.hpp  statement.cpp  statement.hpp  syntaxerror.cpp  syntaxerror.hpp  type.cpp  type.hpp  visitor.cpp  visitor.hpp
src/ast/error/: error.cpp  error.hpp
src/ast/visit/: classvisitor.cpp  classvisitor.hpp  emptyvisitor.cpp  emptyvisitor.hpp  errorvisitor.cpp  errorvisitor.hpp  functionvisitor.cpp  functionvisitor.hpp  printcode.cpp  printcode.hpp  printvisitor.cpp  printvisitor.hpp  recursivevisitor.cpp  recursivevisitor.hpp  scopevisitor.cpp  scopevisitor.hpp  symbolresolver.cpp  symbolresolver.hpp  typevisitor.cpp  typevisitor.hpp  variablevisitor.cpp  variablevisitor.hpp  visitor.hpp
src/misc/: colorizer.cpp  colorizer.hpp
src/parse/: .gitignore  Parser.h  Parser.ih  ParserPreinclude.h  Scanner.h  Scanner.ih  concatstream.cpp  concatstream.hpp  grammar  lexer  scannerstreambuf.cpp  scannerstreambuf.hpp  token.cpp  token.hpp
test/: Makefile  return
test/scope/: bad1.lit  bad2.lit  bad3.lit  good1.lit
test/syntax/: class_good1.lit  function_good1.lit  if_bad1.lit  if_bad2.lit  if_good1.lit  loop_good1.lit  nested_good1.lit
test/syntax/reserved/: as.lit  break.lit  case.lit  class.lit  concept.lit  continue.lit  def.lit  default.lit  elif.lit  else.lit  false.lit  for.lit  forever.lit  if.lit  in.lit  match.lit  pass.lit  return.lit  switch.lit  true.lit  while.lit  with.lit
